fix: 🐛 Fix unsupported 'gap' rule in top nav and main nav (< Safari 14.0)

--- a/src/sass/regions/_top-row.scss
+++ b/src/sass/regions/_top-row.scss
@@ -83,7 +83,8 @@
     flex-wrap: wrap;
     font-size: .9em;
     margin: 0;
-    gap: .8em;
+    row-gap: .8em;
+    column-gap: .8em;
     
     
     li {
